[workspace]
resolver = "3"
members = [
	"aoc",
	"puzzle_lib",
	"puzzle_runner",
	"puzzle_runner/derive",
	"puzzle_web/wasm",
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
criterion = "=0.8.1"
derive-new = "=0.7.0"
itertools = "=0.14.0"
num = "=0.4.3"
paste = "=1.0.15"
rayon = "=1.11.0"
regex = "=1.12.2"
wasm-bindgen = "=0.2.108"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
must_use_candidate = "allow"

# There's a lot of casting between different numeric types in this project. In most cases the possible ranges of these are pretty well understood, and as such most of these concerns are unfounded and just add clutter.
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# While this might be more _memory_ efficient it's often not more computationally efficient, and I care far more about
# that in this project than I do about a bit more memory usage (especially since the memory usage of most solutions is
# relatively minimal anyway).
trivially_copy_pass_by_ref = "allow"
