[package]
name = "puzzle_runner_derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]
default = []
# When this feature is present the `register_series!` macro will produce a `Series` object that includes all the
# `Chapter`s in that crate, otherwise it will produce one with an empty list instead. Inlining all `Chapter`s in this
# manner is required for some uses (e.g., the multi-run entrypoint, WASM builds), but it also slows the build down
# substantially (since the `Series` is in the lib of the crate it will be built for every binary), so we want to avoid
# it for other uses.
include-chapters = []

[dependencies]
paste.workspace = true
proc-macro2 = "=1.0.106"
quote = "=1.0.44"
regex.workspace = true
syn = { version = "=2.0.114", features = ["full", "extra-traits", "visit"] }

[lints]
workspace = true
