[package]
name = "puzzle_wasm"
version.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
aoc = { path = "../../aoc", default-features = false }
puzzle_runner = { path = "../../puzzle_runner", features = ["wasm"] }
console_error_panic_hook = { git = "https://github.com/Chase-Silk/console_error_panic_hook", rev = "13ebf32810ceb0a874fdda725c4d0c9fb7fd0910" }
wasm-bindgen.workspace = true
web-sys = { version = "=0.3.83", features = ["Performance"] }
serde-wasm-bindgen = "=0.6.5"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen-rayon = "=1.3.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
